# TradingBrain

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
claude_notes/: architecture.md  audit_session12.md  decisions.md  discussions.md  gotchas.md  progress.md  roadmap.md
config/: risk_limits.toml  settings.example.toml  settings.toml  strategy_params.json
deploy/: ansible.cfg  inventory.yml.example  monitor.sh  playbook.yml  restart.sh  setup.yml
deploy/templates/: Caddyfile.j2  env.j2
docs/: API.md  DEPLOY.md
docs/dev_notes/: api_plan.md  architecture.md  decisions.md  discussions.md  gotchas.md  progress.md  restart_safety.md  roadmap.md  strategy_document_design.md
monitoring/: build_dashboard.py  prometheus.yml
src/: main.py
src/api/: __init__.py  metrics.py  routes.py  server.py  websocket.py
src/brains/: analyst.py  base.py  executive.py  executor.py
src/candidates/: __init__.py  manager.py  runner.py
src/core/: config.py  logging.py  tokens.py
src/evolution/: parameter_tuner.py  pattern_library.py  performance.py
src/market/: data_feed.py  regime.py  signals.py
src/orchestrator/: ai_client.py  orchestrator.py  reporter.py
src/shell/: activity.py  config.py  contract.py  data_store.py  database.py  kraken.py  portfolio.py  risk.py  truth.py
src/statistics/: loader.py  readonly_db.py  sandbox.py
src/storage/: database.py  (+2 more)
strategy/: strategy_document.md
tests/: test_boot.py  test_candidates.py  test_institutional_learning.py  test_integration.py  test_live_boot.py
(+18 files in other folders)
